fix(search-bar): Stop filter button from overlapping filter chips and show the selected values in chip

--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -11,7 +11,6 @@ floodteam-search-bar .search-bar-wrapper {
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: center;
-  padding-right: 60px;
 }
 floodteam-search-bar .filter-bar {
   display: inline-flex;
@@ -32,6 +31,7 @@ floodteam-search-bar .filter-bar::-webkit-scrollbar-thumb {
 }
 floodteam-search-bar .filter-bar ion-chip {
   margin: auto 10px;
+  width: auto;
   min-width: 100px;
   border-color: rgba(var(--ion-text-color-rgb), 0.8);
   opacity: 0.8;
@@ -42,14 +42,25 @@ floodteam-search-bar .filter-bar ion-chip:hover {
 floodteam-search-bar .filter-bar ion-chip ion-icon {
   color: var(--ion-text-color);
   opacity: 0.6;
+  height: 20px;
+  width: 20px;
+}
+floodteam-search-bar .filter-bar ion-chip:last-of-type {
+  margin-right: 50px;
 }
 floodteam-search-bar .filter-button {
   order: 2;
   margin: auto 0;
   position: absolute;
   right: 0px;
-  top: 0px;
-  bottom: 0px;
+  top: 12px;
+}
+floodteam-search-bar .filter-button ion-badge {
+  border-radius: 100%;
+  font-size: 8px;
+  height: 12px;
+  width: 12px;
+  padding: 2px;
 }
 floodteam-search-bar ion-searchbar {
   max-width: 250px;
@@ -59,7 +70,13 @@ floodteam-search-bar ion-searchbar {
   --box-shadow: none !important;
   --color: var(--ion-text-color) !important;
 }
-
+floodteam-search-bar .searchbar-input {
+  padding-inline-end: 65px !important;
+  padding-inline-start: 42px !important;
+}
+floodteam-search-bar .searchbar-search-icon {
+  left: 10px !important;
+}
 @media only screen and (max-width: 500px) {
   floodteam-search-bar .filter-button ion-label {
     display: none;
